--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
