--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "react-to-print": "^3.2.0",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
