--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^5.2.8",
     "@mercadopago/sdk-react": "^1.0.1",
     "@midudev/tailwind-animations": "^0.2.0",
+    "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -23,6 +24,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
